--- a/src/main/resources/templates/carta.html
+++ b/src/main/resources/templates/carta.html
@@ -15,19 +15,19 @@
     <main class="main">
         <div class="categorias">
             <div class="bebidas">
-                <img src="/static/images/bebidas.jpg" alt="">
+                <img src="./img/bebidas.jpg" alt="">
                 <div class="categoria-info">
                     <h3>Bebidas</h3>
                 </div>
             </div>
             <div class="postres">
-                <img src="/static/images/postres.jpg" alt="">
+                <img src="./img/postres.jpg" alt="">
                 <div class="categoria-info">
                     <h3>Postres</h3>
                 </div>
             </div>
             <div class="platillos">
-                <img src="/static/images/platillos.jpg" alt="">
+                <img src="./img/platillos.jpg" alt="">
                 <div class="categoria-info">
                     <h3>Platillos</h3>
                 </div>
