--- a/src/main/resources/templates/formEmpleados.html
+++ b/src/main/resources/templates/formEmpleados.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title th:text="${empleado.idEmpleado} == null ? 'Agregar Empleado' : 'Editar Empleado'"></title>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <script>
         function redirectToCreateRole() {
             window.location.href = '/roles/nuevo'; // Redirige a la página de creación de rol
@@ -10,6 +11,7 @@
     </script>
 </head>
 <body>
+    <div th:include="components/adminMenu"></div>
     <h1 th:text="${empleado.idEmpleado} == null ? 'Agregar Empleado' : 'Editar Empleado'"></h1>
     <form th:action="@{/empleados}" th:object="${empleado}" method="post">
         <input type="hidden" th:field="*{idEmpleado}"/>
