--- a/src/main/resources/templates/formEmpleadosEditar.html
+++ b/src/main/resources/templates/formEmpleadosEditar.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title th:text="${empleado.idEmpleado} == null ? 'Agregar Empleado' : 'Editar Empleado'"></title>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
+    <div th:include="components/adminMenu"></div>
     <h1 th:text="${empleado.idEmpleado} == null ? 'Agregar Empleado' : 'Editar Empleado'"></h1>
     <form th:action="@{/empleados/{id}(id=${empleado.idEmpleado})}" th:object="${empleado}" method="post">
         <input type="hidden" th:field="*{idEmpleado}"/>
