--- a/src/main/resources/templates/formRolEditar.html
+++ b/src/main/resources/templates/formRolEditar.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title th:text="${rol.idRol} == null ? 'Agregar Rol' : 'Editar Rol'"></title>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
+    <div th:include="components/adminMenu"></div>
     <h1 th:text="${rol.idRol} == null ? 'Agregar Rol' : 'Editar Rol'"></h1>
     <form th:action="@{/roles/{id}(id=${rol.idRol})}" th:object="${rol}" method="post">
         <input type="hidden" th:field="*{idRol}"/>
