--- a/src/main/resources/templates/listEmpleados.html
+++ b/src/main/resources/templates/listEmpleados.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Lista de Empleados</title>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    
 </head>
 <body>
+    <div th:include="components/adminMenu"></div>
     <h1>Lista de Empleados</h1>
     <a href="/empleados/nuevo">Agregar Nuevo Empleado</a>
     <table>
