--- a/src/main/resources/templates/components/link.html
+++ b/src/main/resources/templates/components/link.html
@@ -6,5 +6,6 @@
 <link rel="stylesheet" type="text/css" href="./css/carta.css">
 <link rel="stylesheet" type="text/css" href="./css/menu.css">
 <link rel="stylesheet" type="text/css" href="./css/login.css">
+<link rel="stylesheet" type="text/css" href="./css/principal.css">
 
-
+<link rel="stylesheet" type="text/css" href="./css/style.css">
