--- a/src/main/resources/templates/components/mensajes.html
+++ b/src/main/resources/templates/components/mensajes.html
@@ -3,7 +3,7 @@
     Mensajes para mostrar el error, observaciones o acciones
     -->
     <div th:fragment="mostrarMensaje(mensaje)" class="mensaje-container" th:if="${mensaje != null}">
-        <div class="alert alert-info" role="alert">
+        <div class="alert alert-info custom-alert" role="alert">
             <span th:text="${mensaje}"></span>
         </div>
     </div>
