--- a/src/main/resources/templates/modalproducto.html
+++ b/src/main/resources/templates/modalproducto.html
@@ -3,73 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title th:text="${producto.nomProducto}">Detalles del Producto</title>
-    <style>
-        .modal-producto-contenedor {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 2rem;
-        max-width: 800px;
-        margin: 0 auto;
-        background-color: #c0aeae !important;
-        border-radius: 8px;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .modal-producto-detalle {
-        width: 100%;
-        text-align: center;
-    }
-
-    .modal-producto-titulo {
-        font-size: 2rem;
-        font-weight: bold;
-        color: #333;
-        margin-bottom: 1.5rem;
-    }
-
-    .modal-producto-imagen {
-        width: 50%;
-        height: auto;
-        border-radius: 8px;
-        margin-bottom: 1.5rem;
-    }
-
-    .modal-producto-precio {
-        font-size: 1.5rem;
-        color: #2ecc71;
-        font-weight: 600;
-        margin-bottom: 1rem;
-    }
-
-    .modal-producto-descripcion {
-        font-size: 1rem;
-        color: #a85353;
-        line-height: 1.6;
-        margin-bottom: 2rem;
-    }
-
-    .modal-producto-botones {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-    }
-
-    .modal-producto-boton-agregar {
-        padding: 1rem 2rem;
-        font-size: 1.1rem;
-        background-color: #3498db;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-    }
-
-    .modal-producto-boton-agregar:hover {
-        background-color: #2980b9;
-    }
-    </style>
     <link th:include="components/link"></link>
 </head>
 <body>
@@ -87,7 +20,9 @@
                      th:alt="'Imagen de ' + ${producto.FotoProducto}" class="modal-producto-imagen">
                      
                 <input type="hidden" name="precioUnitario" id="precio-input" th:value="${producto.precioUnitario}">
-
+                
+                <p th:text="'Precio: ' + ${#numbers.formatDecimal(producto.precioUnitario, 2, 2)}" class="modal-producto-precio"></p>
+                
                 <p th:text="${producto.descripcion}" class="modal-producto-descripcion"></p>
         
                 <div class="cantidad-container mt-3">
