--- a/src/main/resources/templates/formEmpleados.html
+++ b/src/main/resources/templates/formEmpleados.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title th:text="${empleado.idEmpleado} == null ? 'Agregar Empleado' : 'Editar Empleado'"></title>
+    <!--<title th:text="${empleado.idEmpleado} == null ? 'Agregar Empleado' : 'Editar Empleado'"></title>-->
     <script>
         function redirectToCreateRole() {
             window.location.href = '/roles/nuevo'; // Redirige a la página de creación de rol
