--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -124,14 +124,14 @@
                 <input type="submit" value="Registrarse" class="button-p" name="registro" id="submit-registro">
             </form>    
             <br>
-            <button id="boton">Buscar DNI</button>
+            <!--button id="boton">Buscar DNI</button>
 
             <div class="res">
                 <input id="doc" readonly="" type="text">
             </div>
             <div class="res">
                 <input id="nombre" readonly="" type="text">
-            </div>
+            </div-->
         </div>
     </div>    
 </body>
@@ -144,8 +144,6 @@
         }
     }, 3000);
 </script>
-
-<script src="./js/dni.js"></script>
 
 </script>
 </html>
