--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -33,7 +33,11 @@ body{
 /*----
 -Estilo principal de botones
 ----*/
-.button-p{
+.button-p, .input-p{
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding:  10px 26px;
     background-color: #f9f1fb;
     border: 2px solid #111827;
@@ -71,5 +75,68 @@ body{
     }
     100% {
         background-color: var(--primary-color); /* Regresar al color original */
+    }
+}
+
+/*
+*
+*/
+
+/* Estilo para el fondo opaco */
+.modal {
+    display: none; /* Oculto por defecto */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+    backdrop-filter: blur(5px); /* Efecto de desenfoque */
+    z-index: 1000; /* Asegura que esté encima de todo */
+    justify-content: center;
+    align-items: center;
+}
+
+/* Mostrar el modal cuando se active */
+.modal.active {
+    display: flex; /* Muestra el modal como un flexbox */
+}
+
+/* Contenido del modal */
+.modal-content {
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 20px;
+    max-width: 500px;
+    width: 100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    animation: fadeIn 0.3s ease-out; /* Animación de entrada */
+}
+
+/* Botón dentro del modal */
+.modal-content button {
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 15px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.modal-content button:hover {
+    background-color: #0056b3;
+}
+
+/* Animación de entrada */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: scale(0.9);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
     }
 }
