--- a/src/main/resources/templates/bienvenido.html
+++ b/src/main/resources/templates/bienvenido.html
@@ -8,11 +8,29 @@
     <link th:include="components/link"></link>
 </head>
 <body>
-
     <header th:include="components/nav_panel"></header>
-    
+
     <h1>¡Bienvenido, <span th:text="${cliente.nombre}"></span>!</h1>
     <p>Realiza tus compras de manera responsable</p>
 
+    <!-- Modal de registro de dirección -->
+    <div id="modal" th:classappend="${mostrarModal} ? 'active' : ''" class="modal">
+        <div class="modal-content">
+            <h2>Completa tu Dirección</h2>
+            <form th:action="@{/guardarDireccion}" method="post">
+                <main th:include="components/form_datos"></main>
+                <button type="submit">Guardar</button>
+            </form>
+            <a th:href="@{/logout}" title="Cerrar Sesión">Cerrar Sesión</a>
+        </div>
+    </div>
+    
+    
 </body>
+
+<script>
+    function closeModal() {
+        document.getElementById('modal').classList.remove('active');
+    }
+</script>
 </html>
