--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"></html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GoodDay</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link th:include="components/link"></link>
 </head>
 <body class="goodday-body">
         
     <header th:include="components/nav_panel"></header>
     <!-- Botón que redirige al login -->
-    <a href="/login" style="text-decoration: none;">
-        <button type="button">Ir al Login</button>
-    </a>
 
     <main>
         <section class="goodday-banner">
@@ -83,7 +81,7 @@
         </div>
     </section>
 
-    <footer class="goodday-footer">
+    <!--footer class="goodday-footer">
         <nav class="goodday-footer__nav">
             <ul class="goodday-footer__nav__list">
                 <li class="goodday-footer__nav__list__item"><a href="#">Ir a la página principal</a></li>
@@ -100,7 +98,7 @@
         </div>
         <p class="goodday-footer_desc">Diseño y desarrollo: <a href="#">Good Day</a></p>
         <p class="goodday-footer_desc">Todos los derechos reservados &copy; 2024 GOOD DAY</p>
-    </footer>
+    </footer-->
     <script src="main.js"></script>
 
 </body>
