Tabla detalle empleado

--- a/src/main/resources/templates/formEmpleados.html
+++ b/src/main/resources/templates/formEmpleados.html
@@ -28,7 +28,7 @@
             <option th:each="rol : ${roles}" th:value="${rol.idRol}" th:text="${rol.nomRol}"></option>
             <option value="nuevo">Crear Nuevo Rol</option> <!-- Opción para crear un nuevo rol -->
         </select>
-        <button type="submit">Guardar</button>
+        <button type="submit">Siguiente</button>
     </form>
     <a href="/empleados">Volver a la lista</a>
 </body>
